Fixed search button bug on mobile and code refactor

--- a/src/scss/_body.scss
+++ b/src/scss/_body.scss
@@ -15,6 +15,7 @@ body {
   background-color: $main-color;
   @include flex(column, space-between, center);
   height: 100vh;
+  height: 100svh;
   width: 100vw;
   font-family: $font-family;
   -webkit-tap-highlight-color: transparent;
